💄 feat: Melhorias na tela de selecionar localização

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -41,7 +41,8 @@
     "location_no_permission": "To access the location it is necessary to allow access to the GPS in the configurations of your device!",
     "location_latitude": "Latitude:",
     "location_longitude": "Longitude:",
-    "localion_loading": "Locating...",
+    "location_loading": "Locating...",
+    "location_unselected": "To remove the inserted location, simply click on the item again and exit.",
     "schedule_title": "Schedule",
     "schedule_choice_data": "Choose a date",
     "schedule_choice_in": "From:",
