--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -41,7 +41,8 @@
     "location_no_permission": "¡Para acceder a la ubicación es necesario permitir el acceso al GPS en las grabaciones de su dispositivo!",
     "location_latitude": "Latitud:",
     "location_longitude": "Longitud:",
-    "localion_loading": "Localizando...",
+    "location_loading": "Localizando...",
+    "location_unselected": "Para eliminar la ubicación insertada, simplemente haga clic en el elemento nuevamente y salga.",
     "schedule_title": "Agenda",
     "schedule_choice_data": "Elige una fecha",
     "schedule_choice_in": "Desde:",
