--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -41,7 +41,8 @@
     "location_no_permission": "Pour accéder à la localisation, il est nécessaire d’autoriser l’accès au GPS dans les enregistrements de votre appareil!",
     "location_latitude": "Latitude :",
     "location_longitude": "Longitude :",
-    "localion_loading": "Localisation en cours...",
+    "location_loading": "Localisation en cours...",
+    "location_unselected": "Pour supprimer l’emplacement inséré, il suffit de cliquer à nouveau sur l’élément et de quitter.",
     "schedule_title": "Agenda",
     "schedule_choice_data": "Choisissez une date",
     "schedule_choice_in": "De :",
