--- a/lib/l10n/app_it.arb
+++ b/lib/l10n/app_it.arb
@@ -41,7 +41,8 @@
     "location_no_permission": "Per accedere alla posizione è necessario consentire l'accesso al GPS nelle registrazioni del proprio dispositivo!",
     "location_latitude": "Latitudine:",
     "location_longitude": "Longitudine:",
-    "localion_loading": "Localizzando...",
+    "location_loading": "Localizzando...",
+    "location_unselected": "Per rimuovere la posizione inserita, è sufficiente fare nuovamente clic sull'elemento ed uscire.",
     "schedule_title": "Agenda",
     "schedule_choice_data": "Scegli una data",
     "schedule_choice_in": "Da:",
