--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -37,11 +37,12 @@
     "location_title": "Localização",
     "location_search": "Digite sua localização",
     "location_subtitle": "Usar minha localização",
-    "location_error": "Localização não encontrada, tente informar o endereço com rua, bairro e cidade",
-    "location_no_permission": "Para acessar a localização é necessário permitir o acesso ao GPS nas condigurações do seu dispositivo!",
+    "location_error": "Localização não encontrada! Tente informar o endereço com rua, bairro e cidade",
+    "location_no_permission": "Para acessar a localização é necessário permitir o acesso ao GPS nas configurações do seu dispositivo!",
     "location_latitude": "Latitude:",
     "location_longitude": "Longitude:",
-    "localion_loading": "Localizando...",
+    "location_loading": "Localizando...",
+    "location_unselected": "Para retirar a localização inserida, basta clicar novamente no item e sair.",
     "schedule_title": "Agenda",
     "schedule_choice_data": "Escolha uma data",
     "schedule_choice_in": "De:",
