feat: acesso ao site acessivel na tela de autenticacao

--- a/lib/app/common/utils/l10n/app_en.arb
+++ b/lib/app/common/utils/l10n/app_en.arb
@@ -117,6 +117,7 @@
     "register_notify_register_conclude_text": "Click the button below to proceed.",
     "register_conclude": "Register",
     "visitor": "Enter as guest",
+    "accessible": "Access accessible website",
     "e_title": "Event",
     "e_title_e": "Space",
     "e_category": "Category",
