--- a/lib/app/common/utils/l10n/app_es.arb
+++ b/lib/app/common/utils/l10n/app_es.arb
@@ -117,6 +117,7 @@
     "register_notify_register_conclude_text": "Haga clic en el botón de abajo para continuar.",
     "register_conclude": "Registrarse",
     "visitor": "Inicia sesión como invitado",
+    "accessible": "Acceda a un sitio web accesible",
     "e_title": "Evento",
     "e_title_e": "Espacio",
     "e_category": "Categoría",
