--- a/lib/app/common/utils/l10n/app_fr.arb
+++ b/lib/app/common/utils/l10n/app_fr.arb
@@ -117,6 +117,7 @@
     "register_notify_register_conclude_text": "Cliquez sur le bouton ci-dessous pour continuer.",
     "register_conclude": "S'inscrire",
     "visitor": "Entrer en tant qu'invité",
+    "accessible": "Accéder au site web accessible",
     "e_title": "Événement",
     "e_title_e": "Espace",
     "e_category": "Catégorie",
