--- a/lib/app/common/utils/l10n/app_it.arb
+++ b/lib/app/common/utils/l10n/app_it.arb
@@ -117,6 +117,7 @@
     "register_notify_register_conclude_text": "Clicca sul pulsante sottostante per procedere.",
     "register_conclude": "Registrati",
     "visitor": "Entra come ospite",
+    "accessible": "Accesso al sito web accessibile",
     "e_title": "Evento",
     "e_title_e": "Spazio",
     "e_category": "Categorie",
