--- a/lib/app/common/utils/l10n/app_pt.arb
+++ b/lib/app/common/utils/l10n/app_pt.arb
@@ -117,6 +117,7 @@
     "register_notify_register_conclude_text": "Clique no botão abaixo para prosseguir.",
     "register_conclude": "Cadastrar-se",
     "visitor": "Entrar como visitante",
+    "accessible": "Acessar site acessível",
     "e_title": "Evento",
     "e_title_e": "Espaço",
     "e_category": "Categoria",
